--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,27 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="container-fluid bg-light py-5">
+    <div class="container-fluid py-5" style="width: 56rem;">
+        <h1>Contact</h1>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+            at
+            its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+            opposed to using</p>
+    </div>
+    <div class="container-fluid py-4 bg-secondary rounded" style="width: 44rem;">
+        <div class="mb-3 row">
+            <label for="staticEmail" class="col-sm-3 fw-bold col-form-label text-end ">Your E-mail</label>
+            <div class="col-sm-9">
+                <input type="text" class="form-control " id="staticEmail" placeholder="Your email">
+            </div>
+        </div>
+        <div class="mb-3 row">
+            <label for="inputPassword" class="col-sm-3 fw-bold col-form-label text-end">Your password</label>
+            <div class="col-sm-9">
+                <textarea class="form-control" rows="5" id="inputPassword"
+                    placeholder="Please enter your message here..."></textarea>
+            </div>
+        </div>
+        <div class="text-end">
+            <button type="submit" class="btn btn-primary mb-3">Submit</button>
+        </div>
+    </div>
+</div>
