--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,13 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="row featurette bg-light border-top justify-content-around">
+    <div class="col-md-7 order-md-4">
+      <h2 class="featurette-heading">The Second Heading. <span class="text-muted">Is Pretty Cool Too .</span></h2>
+      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla.Vestibulum id ligula porta felis euismod
+        semper.Praesent commodo cursus magna, vel scelerisque nisl consectetur.Fusce dapibus,tellus ac cursus commodo </p>
+    </div>
+    <div class="col-md-2 rounded-circle p-5 " >
+      <div class="bd-placeholder-img rounded-circle">
+        <img src="./assets/img/2.jpg" class="rounded-circle" alt="..." width="300px">
+      </div>
+    </div>
+  </div>
