--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,19 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000" style="background: url('https://picsum.photos/2040/800'); width: 100%;
+      height: 512.16px; background-size: cover;
+background-position: center center;">
+            <div class="row">
+                <div class="col-md my-5 bg-light text-center py-3">
+                    <h1 style="font-size: 75px;">ONE PAGE WONDER</h1>
+                </div>
+            </div>
+            <div class="col-md my-1 bg-light text-center py-3">
+                <h1 style="font-size: 50px;">Will Knock Your Sock Off</h1>
+            </div>
+        </div>
+    </div>
+
+</div>
