--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,36 @@
-<!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div class="p-5 border-0   "  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" >
+    <div>
+        <h1>Portafolio</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sunt voluptas eius dolor saepe hic vitae facere perferendis. Deserunt, esse optio ex eius fuga at? Molestiae amet animi suscipit nulla.</p> 
+    </div>  
+    <div class=" colum d-flex flex-row justify-content-center ">
+        <div class="class col-4">
+            <div class="card p-2 border-0" >
+                <img src="https://picsum.photos/400/300" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h1 class="text-primary">Proyect name </h1>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+        </div>
+        <div class="class col-4">
+            <div class="card p-2 border-0 ">
+                <img src="https://picsum.photos/400/300" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h1 class="text-primary"  >Proyect name </h1>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+        </div>
+        <div class="class col-4">
+            <div class="card p-2 border-0 " >
+                <img src="https://picsum.photos/400/300" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h1 class="text-primary" >Proyect name </h1>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+
+    </div>
+</div>
