Se agregan imagenes

--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -6,31 +6,32 @@
     <div class=" colum d-flex flex-row justify-content-center ">
         <div class="class col-4">
             <div class="card p-2 border-0" >
-                <img src="https://picsum.photos/400/300" class="card-img-top" alt="...">
+                <img src="https://thumbs.dreamstime.com/b/sunrise-over-beach-cancun-beautiful-mexico-40065727.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h1 class="text-primary">Proyect name </h1>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum beatae ullam unde corporis quo commodi est ipsum possimus expedita at a deleniti, nobis sapiente cumque voluptates reprehenderit deserunt. Officiis, excepturi!</p>
                 </div>
               </div>
         </div>
         <div class="class col-4">
             <div class="card p-2 border-0 ">
-                <img src="https://picsum.photos/400/300" class="card-img-top" alt="...">
+                <img src="https://thumbs.dreamstime.com/b/sunrise-over-beach-cancun-beautiful-mexico-40065727.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h1 class="text-primary"  >Proyect name </h1>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, itaque harum vel beatae quibusdam, ducimus suscipit illum error id ad nemo officia dicta ipsam eum eveniet quisquam consectetur excepturi expedita.</p>
                 </div>
               </div>
         </div>
         <div class="class col-4">
             <div class="card p-2 border-0 " >
-                <img src="https://picsum.photos/400/300" class="card-img-top" alt="...">
+                <img src="https://thumbs.dreamstime.com/b/sunrise-over-beach-cancun-beautiful-mexico-40065727.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h1 class="text-primary" >Proyect name </h1>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum beatae ullam unde corporis quo commodi est ipsum possimus expedita at a deleniti, nobis sapiente cumque voluptates reprehenderit deserunt. Officiis, excepturi!</p>
                 </div>
               </div>
             </div>
 
-    </div>
-</div>
+        </div>
+
+        
