--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,27 +1,60 @@
-<div class="container-fluid bg-light py-5">
-    <div class="container-fluid py-5" style="width: 56rem;">
-        <h1>Contact</h1>
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
-            at
-            its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-            opposed to using</p>
-    </div>
-    <div class="container-fluid py-4 bg-secondary rounded" style="width: 44rem;">
-        <div class="mb-3 row">
-            <label for="staticEmail" class="col-sm-3 fw-bold col-form-label text-end ">Your E-mail</label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control " id="staticEmail" placeholder="Your email">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <div class="container fluid">
+        <h2>Contact</h2>
+        <h6>Los datos de contacto son conjuntos de datos que contienen información sobre personas relevante para la
+            proyección de la empresa.
+            Estos conjuntos de datos están predominantemente vinculados o relacionados con datos organizacionales o
+            institucionales de las personas.
+        </h6>
+        <br>
+        <div class="container fluid">
+            <div class="row-contact ">
+
+                <div class="col-8" style="width: 100%;">
+                    <form class="bg-light">
+                        <div class=" contrainer fluid">
+                            <div class="row mb-3">
+                                <div class="col ">
+                                    <label for="exampleFormControlInput1" class="form-label"> <b>E-mail</b> </label>
+                                </div>
+                                <div class="col-9 ">
+                                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="your email">
+                                </div>
+                            </div>
+                            <div contrainer fluid>
+                                <div class="row mb-3" >
+                                    <div class="col" >
+                                        <label for="exampleFormControlTextarea1" class="form-label"> <b>Your message</b>
+                                        </label>
+                                    </div>
+                                    <div class="col-81">
+                                        <textarea class="form-control" id="exampleFormControlTextarea1"
+                                            placeholder="Please enter your message here..." ></textarea>
+                                    </div>
+                                    
+                                    <div class="d-grid gap-2 justify-content-md-end">
+                                        <button type="button" class="btn btn-primary">Submit</button>
+                                    </div>
+                                </div>   
+                            </div>       
+                    </form>
+                </div>
             </div>
         </div>
-        <div class="mb-3 row">
-            <label for="inputPassword" class="col-sm-3 fw-bold col-form-label text-end">Your password</label>
-            <div class="col-sm-9">
-                <textarea class="form-control" rows="5" id="inputPassword"
-                    placeholder="Please enter your message here..."></textarea>
-            </div>
-        </div>
-        <div class="text-end">
-            <button type="submit" class="btn btn-primary mb-3">Submit</button>
-        </div>
-    </div>
-</div>
+</body>
+
+</html>
