--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,37 +1,33 @@
-<div class="p-5 border-0   "  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" >
-    <div>
-        <h1>Portafolio</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sunt voluptas eius dolor saepe hic vitae facere perferendis. Deserunt, esse optio ex eius fuga at? Molestiae amet animi suscipit nulla.</p> 
-    </div>  
-    <div class=" colum d-flex flex-row justify-content-center ">
-        <div class="class col-4">
-            <div class="card p-2 border-0" >
-                <img src="https://thumbs.dreamstime.com/b/sunrise-over-beach-cancun-beautiful-mexico-40065727.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h1 class="text-primary">Proyect name </h1>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum beatae ullam unde corporis quo commodi est ipsum possimus expedita at a deleniti, nobis sapiente cumque voluptates reprehenderit deserunt. Officiis, excepturi!</p>
-                </div>
+<div class="container fluid  py-5">
+  <h1 class="fw-semibold h1">Porfolio</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class="row">
+      <div class="col-4 col-sm-4 col-md-4 col-lg-4 border-top">
+          <div class="card">
+              <img src="/website/assets/img/big-project-image.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title h4" style="color: rgb(80, 80, 221)">Project Name</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
-        </div>
-        <div class="class col-4">
-            <div class="card p-2 border-0 ">
-                <img src="https://thumbs.dreamstime.com/b/sunrise-over-beach-cancun-beautiful-mexico-40065727.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h1 class="text-primary"  >Proyect name </h1>
-                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, itaque harum vel beatae quibusdam, ducimus suscipit illum error id ad nemo officia dicta ipsam eum eveniet quisquam consectetur excepturi expedita.</p>
-                </div>
+            </div>     
+      </div>
+      <div class="col-4 col-sm-4 col-md-4 col-lg-4">
+          <div class="card">
+              <img src="/website/assets/img/big-project-image.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                  <h4 class="card-title h4" style="color: rgb(80, 80, 221)">Project Name</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
-        </div>
-        <div class="class col-4">
-            <div class="card p-2 border-0 " >
-                <img src="https://thumbs.dreamstime.com/b/sunrise-over-beach-cancun-beautiful-mexico-40065727.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h1 class="text-primary" >Proyect name </h1>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum beatae ullam unde corporis quo commodi est ipsum possimus expedita at a deleniti, nobis sapiente cumque voluptates reprehenderit deserunt. Officiis, excepturi!</p>
-                </div>
+            </div>     
+      </div>
+      <div class="col-4 col-sm-4 col-md-4 col-lg-4">
+          <div class="card">
+              <img src="/website/assets/img/big-project-image.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                  <h4 class="card-title h4" style="color: rgb(80, 80, 221)">Project Name</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
-            </div>
-
-        </div>
-
-        
+            </div>     
+      </div>
+  </div>
+</div>
