--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,13 +1,16 @@
 <!-- your html code here -->
-<div class="row featurette bg-light border-top justify-content-around">
-    <div class="col-md-7 order-md-4">
-      <h2 class="featurette-heading">The Second Heading. <span class="text-muted">Is Pretty Cool Too .</span></h2>
-      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla.Vestibulum id ligula porta felis euismod
-        semper.Praesent commodo cursus magna, vel scelerisque nisl consectetur.Fusce dapibus,tellus ac cursus commodo </p>
-    </div>
-    <div class="col-md-2 rounded-circle p-5 " >
-      <div class="bd-placeholder-img rounded-circle">
+<div class="row featurette border-top bg-light" style="margin-top: 5px; padding: 5px">
+ 
+  <div class="col-md-5 rounded-circle">
+    <div class="bd-placeholder-img rounded-circle">
         <img src="./assets/img/2.jpg" class="rounded-circle" alt="..." width="300px">
-      </div>
     </div>
+</div>
+ <div class="col-md-7">
+      <h2 class="featurette-heading">This Second Heading<span class="text-muted"> Will Catch You Eye</span></h2>
+      <p class="lead">Donec ullamcorper nulla non metus autor fringilla. Vestilbulum id ligula porta felis euismond
+          semper.Praesent commodo cursus magna,vel scelerisque nisl consectetur.Fusce dapibis,tellus ac cursus
+          commodo.</p>
   </div>
+  
+</div>
