--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,19 +1,20 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000" style="background: url('https://picsum.photos/2040/800'); width: 100%;
-      height: 512.16px; background-size: cover;
-background-position: center center;">
-            <div class="row">
-                <div class="col-md my-5 bg-light text-center py-3">
-                    <h1 style="font-size: 75px;">ONE PAGE WONDER</h1>
-                </div>
-            </div>
-            <div class="col-md my-1 bg-light text-center py-3">
-                <h1 style="font-size: 50px;">Will Knock Your Sock Off</h1>
-            </div>
-        </div>
-    </div>
 
+
+<div class="container-fluid">
+    <div class="jumbotron jumbotron-fluid pt-5" style="
+    background-image:url(/website/assets/img/bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 1000px;">
+
+        
+            <div class="row container-fluid text-center px-4">
+                <h1 class="col-12 display-1 font-weight-bold alert alert-light text-dark opacity-75 "><b>One Page Wonder</b></h1>
+    
+                <h1 class="col-12 display-4 font-weight-bold alert alert-light text-dark opacity-75"><strong>Will Knock Your Socks Off</strong></h1>
+            </div>
+    </div>
 </div>
